
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct snd_soc_dai {struct snd_soc_component* component; } ;
struct snd_soc_component {int dummy; } ;
struct nau8540 {int regmap; } ;


 int EINVAL ;
 unsigned int NAU8540_I2S_BP_INV ;
 unsigned int NAU8540_I2S_DF_I2S ;
 unsigned int NAU8540_I2S_DF_LEFT ;
 unsigned int NAU8540_I2S_DF_MASK ;
 unsigned int NAU8540_I2S_DF_PCM_AB ;
 unsigned int NAU8540_I2S_DF_RIGTH ;
 unsigned int NAU8540_I2S_DL_MASK ;
 unsigned int NAU8540_I2S_DO12_OE ;
 unsigned int NAU8540_I2S_DO34_OE ;
 unsigned int NAU8540_I2S_MS_MASK ;
 unsigned int NAU8540_I2S_MS_MASTER ;
 unsigned int NAU8540_I2S_PCMB_EN ;
 int NAU8540_REG_PCM_CTRL0 ;
 int NAU8540_REG_PCM_CTRL1 ;
 int NAU8540_REG_PCM_CTRL2 ;




 unsigned int SND_SOC_DAIFMT_FORMAT_MASK ;


 unsigned int SND_SOC_DAIFMT_INV_MASK ;

 unsigned int SND_SOC_DAIFMT_MASTER_MASK ;


 int regmap_update_bits (int ,int ,unsigned int,unsigned int) ;
 struct nau8540* snd_soc_component_get_drvdata (struct snd_soc_component*) ;

__attribute__((used)) static int nau8540_set_fmt(struct snd_soc_dai *dai, unsigned int fmt)
{
 struct snd_soc_component *component = dai->component;
 struct nau8540 *nau8540 = snd_soc_component_get_drvdata(component);
 unsigned int ctrl1_val = 0, ctrl2_val = 0;

 switch (fmt & SND_SOC_DAIFMT_MASTER_MASK) {
 case 136:
  ctrl2_val |= NAU8540_I2S_MS_MASTER;
  break;
 case 135:
  break;
 default:
  return -EINVAL;
 }

 switch (fmt & SND_SOC_DAIFMT_INV_MASK) {
 case 129:
  break;
 case 131:
  ctrl1_val |= NAU8540_I2S_BP_INV;
  break;
 default:
  return -EINVAL;
 }

 switch (fmt & SND_SOC_DAIFMT_FORMAT_MASK) {
 case 132:
  ctrl1_val |= NAU8540_I2S_DF_I2S;
  break;
 case 130:
  ctrl1_val |= NAU8540_I2S_DF_LEFT;
  break;
 case 128:
  ctrl1_val |= NAU8540_I2S_DF_RIGTH;
  break;
 case 134:
  ctrl1_val |= NAU8540_I2S_DF_PCM_AB;
  break;
 case 133:
  ctrl1_val |= NAU8540_I2S_DF_PCM_AB;
  ctrl1_val |= NAU8540_I2S_PCMB_EN;
  break;
 default:
  return -EINVAL;
 }

 regmap_update_bits(nau8540->regmap, NAU8540_REG_PCM_CTRL0,
  NAU8540_I2S_DL_MASK | NAU8540_I2S_DF_MASK |
  NAU8540_I2S_BP_INV | NAU8540_I2S_PCMB_EN, ctrl1_val);
 regmap_update_bits(nau8540->regmap, NAU8540_REG_PCM_CTRL1,
  NAU8540_I2S_MS_MASK | NAU8540_I2S_DO12_OE, ctrl2_val);
 regmap_update_bits(nau8540->regmap, NAU8540_REG_PCM_CTRL2,
  NAU8540_I2S_DO34_OE, 0);

 return 0;
}
